--- a/src/main/resources/com/example/project_part2/completeMyinfo.fxml
+++ b/src/main/resources/com/example/project_part2/completeMyinfo.fxml
@@ -3,12 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.CompletePersonalInformation">
    <children>
       <ImageView fitHeight="812.0" fitWidth="1374.0" layoutX="-6.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -40,37 +41,37 @@
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label1111" alignment="CENTER" layoutX="615.0" layoutY="292.0" prefHeight="80.0" prefWidth="147.0" text="Country :" textFill="WHITE">
+      <Label fx:id="label1111" alignment="CENTER" layoutX="615.0" layoutY="294.0" prefHeight="80.0" prefWidth="147.0" text="Country :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label11111" alignment="CENTER" layoutX="647.0" layoutY="378.0" prefHeight="80.0" prefWidth="147.0" text="Bio :" textFill="WHITE">
+      <Label fx:id="label11111" alignment="CENTER" layoutX="647.0" layoutY="382.0" prefHeight="80.0" prefWidth="147.0" text="Bio :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label12" alignment="CENTER" layoutX="742.0" layoutY="55.0" prefHeight="80.0" prefWidth="219.0" text="---" textFill="WHITE">
+      <Label fx:id="label12" alignment="CENTER" layoutX="739.0" layoutY="51.0" prefHeight="80.0" prefWidth="219.0" text="---" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <CheckBox layoutX="548.0" layoutY="483.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="125.0" text="Male" textFill="WHITE">
+      <CheckBox fx:id="male" layoutX="548.0" layoutY="483.0" mnemonicParsing="false" onAction="#malefunc" prefHeight="51.0" prefWidth="125.0" text="Male" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <CheckBox layoutX="720.0" layoutY="485.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="125.0" text="Female" textFill="WHITE">
+      <CheckBox fx:id="female" layoutX="720.0" layoutY="485.0" mnemonicParsing="false" onAction="#femalefunc" prefHeight="51.0" prefWidth="125.0" text="Female" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <CheckBox layoutX="721.0" layoutY="569.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="165.0" text="Married" textFill="WHITE">
+      <CheckBox fx:id="marr" layoutX="721.0" layoutY="569.0" mnemonicParsing="false" onAction="#marrfunc" prefHeight="51.0" prefWidth="165.0" text="Married" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <CheckBox layoutX="549.0" layoutY="566.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="165.0" text="Single" textFill="WHITE">
+      <CheckBox fx:id="notmarr" layoutX="549.0" layoutY="566.0" mnemonicParsing="false" onAction="#notmarrfunc" prefHeight="51.0" prefWidth="165.0" text="Single" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
@@ -85,5 +86,30 @@
             <Font name="System Italic" size="19.0" />
          </font>
       </Button>
+      <Label fx:id="ordorbus" alignment="CENTER" layoutX="-20.0" layoutY="-7.0" prefHeight="80.0" prefWidth="448.0" text="User name :" textFill="WHITE">
+         <font>
+            <Font name="Footlight MT Light" size="31.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nameF" alignment="CENTER" layoutX="763.0" layoutY="149.0" prefHeight="43.0" prefWidth="280.0" promptText="Name">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="Biographyf" alignment="CENTER" layoutX="770.0" layoutY="403.0" prefHeight="43.0" prefWidth="403.0" promptText="Biography">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="Countryf" alignment="CENTER" layoutX="770.0" layoutY="314.0" prefHeight="43.0" prefWidth="280.0" promptText="Country">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="cityF" alignment="CENTER" layoutX="767.0" layoutY="230.0" prefHeight="43.0" prefWidth="280.0" promptText="City">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
