--- a/src/main/resources/com/example/project_part2/createordpost.fxml
+++ b/src/main/resources/com/example/project_part2/createordpost.fxml
@@ -30,12 +30,15 @@
             <Font name="System Italic" size="19.0" />
          </font>
       </Button>
-      <Button layoutX="274.0" layoutY="477.0" mnemonicParsing="false" onAction="#addprof" prefHeight="41.0" prefWidth="141.0" text="Choose Photo">
+      <Button layoutX="238.0" layoutY="477.0" mnemonicParsing="false" onAction="#addprof" prefHeight="41.0" prefWidth="141.0" text="Choose Photo">
          <font>
             <Font name="System Italic" size="16.0" />
          </font>
       </Button>
-      <ImageView fx:id="photo" fitHeight="267.0" fitWidth="384.0" layoutX="156.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="photo" fitHeight="267.0" fitWidth="279.0" layoutX="156.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@icon/download-icon-upload+export+upload+upload+to+cloud+icon-1320165659391053645_256.png" />
+         </image></ImageView>
       <Label fx:id="label" alignment="CENTER" layoutX="67.0" layoutY="48.0" prefHeight="91.0" prefWidth="536.0" text="Create Ordinary Post" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="41.0" />
