--- a/src/main/resources/com/example/project_part2/personalpage.fxml
+++ b/src/main/resources/com/example/project_part2/personalpage.fxml
@@ -27,7 +27,7 @@
             <Font name="Footlight MT Light" size="24.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="11.0" layoutY="2.0" prefHeight="85.0" prefWidth="303.0" text="OWL Messenger" textFill="WHITE">
+      <Label alignment="CENTER" layoutX="75.0" layoutY="2.0" prefHeight="85.0" prefWidth="281.0" text="OWL Messenger" textFill="WHITE">
          <font>
             <Font name="Rage Italic" size="45.0" />
          </font>
@@ -69,10 +69,30 @@
       <Button fx:id="sugg" layoutX="88.0" layoutY="452.0" mnemonicParsing="false" onAction="#sugg" opacity="0.0" prefHeight="51.0" prefWidth="81.0" text="Button" />
       <Button fx:id="contact" layoutX="86.0" layoutY="560.0" mnemonicParsing="false" onAction="#contact" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" />
       <Button fx:id="direct" layoutX="86.0" layoutY="644.0" mnemonicParsing="false" onAction="#direct" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" />
-      <ScrollPane layoutX="367.0" layoutY="44.0" prefHeight="100.0" prefWidth="676.0">
+      <ScrollPane layoutX="378.0" layoutY="44.0" prefHeight="100.0" prefWidth="676.0">
         <content>
           <AnchorPane fx:id="stories" minHeight="0.0" minWidth="0.0" prefHeight="84.0" prefWidth="754.0" />
         </content>
       </ScrollPane>
+      <ImageView fitHeight="71.0" fitWidth="74.0" layoutX="1200.0" layoutY="659.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@icon/off.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="1197.0" layoutY="659.0" mnemonicParsing="false" onAction="#exit" opacity="0.0" prefHeight="75.0" prefWidth="74.0" text="Button" />
+      <ImageView fitHeight="75.0" fitWidth="81.0" layoutX="1095.0" layoutY="656.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@icon/B.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="1091.0" layoutY="657.0" mnemonicParsing="false" onAction="#BACKtologin" opacity="0.0" prefHeight="75.0" prefWidth="74.0" text="Button" />
+      <ImageView fitHeight="65.0" fitWidth="74.0" layoutX="13.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@icon/AppIcon.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="19.0" layoutY="16.0" mnemonicParsing="false" onAction="#intro" opacity="0.0" prefHeight="65.0" prefWidth="298.0" text="Button" />
+      <ImageView fx:id="proffield" fitHeight="124.0" fitWidth="141.0" layoutX="1132.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="1115.0" layoutY="10.0" mnemonicParsing="false" onAction="#viewLoginuser" opacity="0.0" prefHeight="146.0" prefWidth="166.0" text="Button" />
    </children>
 </Pane>
