--- a/src/main/resources/com/example/project_part2/createStory.fxml
+++ b/src/main/resources/com/example/project_part2/createStory.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.CreatenewStory">
    <children>
-      <ImageView fitHeight="882.0" fitWidth="1392.0" layoutX="-11.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="bckgr" fitHeight="882.0" fitWidth="1392.0" layoutX="-11.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@lake-sunset-poland-55-big.jpg" />
          </image>
