--- a/src/main/resources/com/example/project_part2/showPostFXML.fxml
+++ b/src/main/resources/com/example/project_part2/showPostFXML.fxml
@@ -5,34 +5,46 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="MainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.ShowPostFXML">
+<Pane fx:id="MainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.ShowPostFXML">
     <children>
-        <ScrollPane layoutX="1003.0" layoutY="157.0" prefHeight="196.0" prefWidth="236.0">
+        <ImageView fx:id="bckgr" fitHeight="812.0" fitWidth="1374.0" layoutX="-4.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@300033.png" />
+            </image>
+        </ImageView>
+        <ScrollPane layoutX="1003.0" layoutY="190.0" prefHeight="196.0" prefWidth="236.0">
             <content>
                 <AnchorPane fx:id="LikeAnchor" minHeight="0.0" minWidth="0.0" prefHeight="225.0" prefWidth="219.0" />
             </content>
         </ScrollPane>
-        <ScrollPane fx:id="CommentScroll" layoutX="371.0" layoutY="47.0" prefHeight="440.0" prefWidth="562.0">
+        <ScrollPane fx:id="CommentScroll" layoutX="371.0" layoutY="80.0" prefHeight="440.0" prefWidth="562.0">
             <content>
                 <AnchorPane fx:id="CommentAnchor" minHeight="0.0" minWidth="0.0" prefHeight="448.0" prefWidth="545.0" />
             </content>
         </ScrollPane>
-        <DatePicker fx:id="StartDate" layoutX="1027.0" layoutY="46.0" promptText="Start Date" />
-        <DatePicker fx:id="EndDate" layoutX="1027.0" layoutY="84.0" promptText="End Date" />
-        <TextArea fx:id="CommentArea" layoutX="484.0" layoutY="512.0" prefHeight="41.0" prefWidth="349.0" promptText="Enter Comment" />
-        <ScrollPane fx:id="ViewScroll" layoutX="1004.0" layoutY="411.0" prefHeight="212.0" prefWidth="237.0">
+        <DatePicker fx:id="StartDate" layoutX="1027.0" layoutY="79.0" promptText="Start Date" />
+        <DatePicker fx:id="EndDate" layoutX="1027.0" layoutY="117.0" promptText="End Date" />
+        <TextArea fx:id="CommentArea" layoutX="484.0" layoutY="545.0" prefHeight="41.0" prefWidth="349.0" promptText="Enter Comment" />
+        <ScrollPane fx:id="ViewScroll" layoutX="1004.0" layoutY="444.0" prefHeight="212.0" prefWidth="237.0">
             <content>
                 <AnchorPane fx:id="ViewAnchor" minHeight="0.0" minWidth="0.0" prefHeight="229.0" prefWidth="220.0" />
             </content>
         </ScrollPane>
-        <Button fx:id="UpdateButton" layoutX="1087.0" layoutY="121.0" mnemonicParsing="false" onAction="#UpdateLikeAndComment" text="Update" />
-        <Button fx:id="Add" layoutX="852.0" layoutY="520.0" mnemonicParsing="false" onAction="#AddComment" text="          " />
-        <Label fx:id="CaptionLabel" layoutX="39.0" layoutY="308.0" text="Label" />
-        <Label fx:id="DescriptionLabel" layoutX="39.0" layoutY="411.0" text="Label" />
-        <Button fx:id="EditPost" layoutX="27.0" layoutY="274.0" mnemonicParsing="false" onAction="#UpdatePost" text="Edit Caption" />
-        <Button layoutX="41.0" layoutY="623.0" mnemonicParsing="false" onAction="#Back" text="Back" />
+        <Button fx:id="UpdateButton" layoutX="1087.0" layoutY="154.0" mnemonicParsing="false" onAction="#UpdateLikeAndComment" text="Update" />
+        <Button fx:id="Add" layoutX="852.0" layoutY="553.0" mnemonicParsing="false" onAction="#AddComment" text="          " />
+        <Label fx:id="CaptionLabel" layoutX="39.0" layoutY="341.0" text="Label" />
+        <Label fx:id="DescriptionLabel" layoutX="39.0" layoutY="444.0" text="Label" />
+        <Button fx:id="EditPost" layoutX="27.0" layoutY="307.0" mnemonicParsing="false" onAction="#UpdatePost" text="Edit Caption" />
+      <ImageView fitHeight="64.0" fitWidth="62.0" layoutX="59.0" layoutY="603.0" pickOnBounds="true" preserveRatio="true" rotate="-180.0">
+         <image>
+            <Image url="@icon/B.png" />
+         </image>
+      </ImageView>
+        <Button layoutX="60.0" layoutY="610.0" mnemonicParsing="false" onAction="#Back" opacity="0.0" prefHeight="49.0" prefWidth="52.0" text="Back" />
     </children>
 </Pane>
