--- a/src/main/resources/com/example/project_part2/viewuser.fxml
+++ b/src/main/resources/com/example/project_part2/viewuser.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="PANE" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.Viewuser">
    <children>
-      <ImageView fitHeight="982.0" fitWidth="1372.0" layoutX="-2.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="bckgr" fitHeight="982.0" fitWidth="1372.0" layoutX="-2.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@31189.jpg" />
          </image>
