--- a/src/main/resources/com/example/project_part2/showPostFXML.fxml
+++ b/src/main/resources/com/example/project_part2/showPostFXML.fxml
@@ -46,5 +46,6 @@
          </image>
       </ImageView>
         <Button layoutX="60.0" layoutY="610.0" mnemonicParsing="false" onAction="#Back" opacity="0.0" prefHeight="49.0" prefWidth="52.0" text="Back" />
+        <Button fx:id="RepostButton" layoutX="158.0" layoutY="307.0" mnemonicParsing="false" onAction="#RepostManage" text="          " />
     </children>
 </Pane>
